# openstack-k8s-modernization-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/sample/: run_metadata.json
artifacts/sample/assessment/: assessment_report.json  assessment_report.md  risk_register.csv
artifacts/sample/automation/: automation_metadata.json  terraform_outputs.json  terraform_plan.txt
artifacts/sample/design/: architecture.mmd  target_state.md
artifacts/sample/executive/: executive_summary.md
artifacts/sample/kpis/: dashboard.html  kpis.json  kpis.md
docs/: roadmap.md
docs/deployment-patterns/: gitops-friendly-layout.md  k8s-baseline.md  secrets-strategy.md
docs/ops-standards/: change-management.md  naming-conventions.md  rbac.md  slo-sli.md
docs/runbooks/: backup-restore.md  capacity-cost-review.md  incident-response.md  upgrades.md
iac/ansible/: site.yml
iac/ansible/templates/: k8s_baseline.yaml.j2  openstack_controller_standard.md.j2
iac/terraform/: main.tf
sample_data/: legacy_env.yaml
scripts/: run_demo.sh  smoke_test.sh
src/okml/: __main__.py  cli.py  config.py
src/okml/adapters/: ansible_runner.py  terraform_runner.py
src/okml/domain/: kpis.py  models.py  recommendations.py  scoring.py
src/okml/reporting/: writers.py
src/okml/services/: assessment_service.py  automation_service.py  design_service.py  executive_service.py  kpi_service.py
src/okml/utils/: logging.py  run_id.py  subprocess.py
tests/: conftest.py  test_cli_integration.py  test_kpis.py  test_recommendations.py  test_scoring.py
(+5 files in other folders)
